# cpp-and-rust-with-rp-pico

./: CMakeLists.txt  README.md  cargo-generate.toml  macros.h  main.cpp  rusty.h
rusty/: Cargo.toml  build.rs  cbindgen.toml  wrapper.h
rusty/src/: allocator.rs  ctypes.rs  lib.rs  panic_handler.rs  print.rs  thread.rs  time.rs
